Change title of book

--- a/Lectures/latex/lecture-01.tex
+++ b/Lectures/latex/lecture-01.tex
@@ -1,5 +1,5 @@
 % Lecture 01: Computer Abstractions
-% CO224 - Computer Architecture
+% Lectures on Computer Architecture
 
 \chapter{Computer Abstractions}
 
