--- a/Lectures/latex/lecture-02.tex
+++ b/Lectures/latex/lecture-02.tex
@@ -1,5 +1,5 @@
 % Lecture 02: Technology Trends
-% CO224 - Computer Architecture
+% Lectures on Computer Architecture
 
 \chapter{Technology Trends}
 
