--- a/Lectures/latex/lecture-03.tex
+++ b/Lectures/latex/lecture-03.tex
@@ -1,5 +1,5 @@
 % Lecture 03: Understanding Performance
-% CO224 - Computer Architecture
+% Lectures on Computer Architecture
 
 \chapter{Understanding Performance}
 
