--- a/Lectures/latex/lecture-04.tex
+++ b/Lectures/latex/lecture-04.tex
@@ -1,5 +1,5 @@
 % Lecture 04: Introduction to ARM Assembly
-% CO224 - Computer Architecture
+% Lectures on Computer Architecture
 
 \chapter{Introduction to ARM Assembly}
 
