--- a/Lectures/latex/lecture-05.tex
+++ b/Lectures/latex/lecture-05.tex
@@ -1,5 +1,5 @@
 % Lecture 05: Number Representation and Data Processing
-% CO224 - Computer Architecture
+% Lectures on Computer Architecture
 
 \chapter{Number Representation and Data Processing}
 
