--- a/Lectures/latex/lecture-07.tex
+++ b/Lectures/latex/lecture-07.tex
@@ -1,5 +1,5 @@
 % Lecture 07: Function Call and Return
-% CO224 - Computer Architecture
+% Lectures on Computer Architecture
 
 \chapter{Function Call and Return}
 
