--- a/Lectures/latex/main.tex
+++ b/Lectures/latex/main.tex
@@ -52,7 +52,7 @@
     filecolor=darkblue,
     urlcolor=primaryblue,
     citecolor=primaryblue,
-    pdftitle={CO224 Computer Architecture - Complete Lecture Notes},
+    pdftitle={Lectures on Computer Architecture - Complete Lecture Notes},
     pdfauthor={Dr. Isuru Nawinne},
     pdfsubject={Computer Architecture},
     pdfkeywords={Computer Architecture, ARM, Processors, Memory, Cache},
@@ -92,14 +92,14 @@
 \fancyhf{}
 \fancyhead[L]{\nouppercase{\leftmark}}
 \fancyhead[R]{\thepage}
-\fancyfoot[C]{\small CO224 - Computer Architecture}
+\fancyfoot[C]{\small Lectures on Computer Architecture}
 \renewcommand{\headrulewidth}{0.5pt}
 \renewcommand{\footrulewidth}{0.5pt}
 
 % Plain style for chapter pages
 \fancypagestyle{plain}{
     \fancyhf{}
-    \fancyfoot[C]{\small CO224 - Computer Architecture}
+    \fancyfoot[C]{\small Lectures on Computer Architecture}
     \fancyfoot[R]{\thepage}
     \renewcommand{\headrulewidth}{0pt}
     \renewcommand{\footrulewidth}{0.5pt}
@@ -150,7 +150,7 @@
     \centering
     \vspace*{3cm}
     
-    {\Huge\bfseries\color{primaryblue} CO224\par}
+    {\Huge\bfseries\color{primaryblue} Lectures on\par}
     \vspace{0.5cm}
     {\huge\bfseries Computer Architecture\par}
     \vspace{1cm}
