Update lecture materials for improved clarity and consistency across documents

--- a/Lectures/latex/main.tex
+++ b/Lectures/latex/main.tex
@@ -182,7 +182,7 @@ This lecture series provides a comprehensive guide to computer architecture, cov
 
 \section*{About the Instructor}
 
-Dr. Isuru Nawinne received his B.Sc. degree in Engineering from the University of Peradeniya, Sri Lanka (2011), and his Ph.D. in Computer Science and Engineering from the University of New South Wales, Sydney, Australia (2016). He teaches one of the best computer architecture foundational courses in the world, with materials and delivery methods that consistently produce impressive outcomes. His students are regularly recruited by world-leading computer architecture companies including ARM and SiFive.
+Dr. Isuru Nawinne received his B.Sc. degree in Engineering from the University of Peradeniya, Sri Lanka (2011), and his Ph.D. in Computer Science and Engineering from the University of New South Wales, Sydney, Australia (2016). He teaches one of the best computer architecture foundational courses in the world, with materials and delivery methods that consistently produce impressive outcomes. His students often pursue PhD research at world renowned universities, and are regularly recruited by world-leading computer architecture companies including ARM and SiFive.
 
 \section*{Contact Information}
 
