Add scripts for converting Markdown lectures to LaTeX, fixing numbering, spacing, and video links
- Implemented `fix_lectures_1_3.py` to convert Markdown files to LaTeX with proper formatting.
- Created `fix_section_numbering.py` to remove manual numbering from LaTeX section commands.
- Added `fix_spacing.py` to standardize spacing in LaTeX files.
- Developed `format_code.py` to format code blocks in Markdown files.
- Introduced `md_to_latex_converter.py` for advanced Markdown to LaTeX conversion.
- Built `preview_server.py` for local preview of the lecture website.
- Created `update_all_videos.py` to update video links in the main page.
- Added `update_lecture_numbering.py` to automate lecture numbering updates.
- Implemented `update_video_links_complete.py` to update video links in both index and lecture pages.

--- a/Lectures/latex/lecture-01.tex
+++ b/Lectures/latex/lecture-01.tex
@@ -1,6 +1,6 @@
 \section{Lecture 1: Computer Abstractions and Technology}
 
-\emph{By Dr. Isuru Nawinne}
+\emph{By Isuru Nawinne}
 
 \subsection{Introduction}
 
@@ -12,7 +12,7 @@ This lecture introduces the fundamental concepts of computer system abstractions
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.7\textwidth]{../img/Chapter 1 Computer Abstractions and Technology.jpg}
+\includegraphics[width=0.7\textwidth]{img/Chapter 1 Computer Abstractions and Technology.jpg}
 \caption{Computer System Abstraction Layers}
 \end{figure}
 
