--- a/Lectures/latex/lecture-02.tex
+++ b/Lectures/latex/lecture-02.tex
@@ -129,8 +129,8 @@ Moore's Law made computationally intensive applications possible:
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.7\textwidth]{../img/Chapter%201%20Moore's%20Law.jpg}
-\caption{Computer System Abstraction Layers}
+\includegraphics[width=0.7\textwidth]{img/Chapter 1 Moore's Law.jpg}
+\caption{Moore's Law: Transistor Count Growth}
 \end{figure}
 
 The historical data shows remarkable consistency with Moore's prediction:
@@ -631,8 +631,8 @@ Processor clock frequencies increased dramatically for over two decades:
 \textbf{Historical Progression:}
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.7\textwidth]{../img/Chapter%201%20Power%20Wall.jpg}
-\caption{Computer System Abstraction Layers}
+\includegraphics[width=0.7\textwidth]{img/Chapter 1 Power Wall.jpg}
+\caption{Clock Rate Trends and the Power Wall}
 \end{figure}
 
 \begin{itemize}
@@ -953,8 +953,8 @@ Instead of one powerful processor, put \textbf{multiple complete processors on s
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.7\textwidth]{../img/Chapter%201%20AMD%20Barcelona.jpg}
-\caption{Computer System Abstraction Layers}
+\includegraphics[width=0.7\textwidth]{img/Chapter 1 AMD Barcelona.jpg}
+\caption{AMD Barcelona Quad-Core Processor}
 \end{figure}
 
 \begin{itemize}
