--- a/Lectures/latex/lecture-04.tex
+++ b/Lectures/latex/lecture-04.tex
@@ -55,7 +55,7 @@ This lecture introduces ARM assembly language programming, providing the foundat
 \textbf{Register Usage Conventions}
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.7\textwidth]{../img/Chapter%202%20ARM%20Conventions.jpg}
+\includegraphics[width=0.7\textwidth]{img/Chapter%202%20ARM%20Conventions.jpg}
 \caption{Computer System Abstraction Layers}
 \end{figure}
 
