--- a/Lectures/latex/lecture-12.tex
+++ b/Lectures/latex/lecture-12.tex
@@ -93,7 +93,7 @@ This lecture introduces pipelining as the primary performance enhancement techni
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.7\textwidth]{../img/Non-Pipelined.jpg}
+\includegraphics[width=0.7\textwidth]{img/Non-Pipelined.jpg}
 \caption{Computer System Abstraction Layers}
 \end{figure}
 
@@ -124,7 +124,7 @@ This lecture introduces pipelining as the primary performance enhancement techni
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.7\textwidth]{../img/Pipelined.jpg}
+\includegraphics[width=0.7\textwidth]{img/Pipelined.jpg}
 \caption{Computer System Abstraction Layers}
 \end{figure}
 
