--- a/Lectures/latex/lecture-16.tex
+++ b/Lectures/latex/lecture-16.tex
@@ -338,7 +338,7 @@ When all entries are valid, need replacement policy to choose which block to evi
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.7\textwidth]{../img/Memory%20Systems.jpg}
+\includegraphics[width=0.7\textwidth]{img/Memory%20Systems.jpg}
 \caption{Memory System}
 \end{figure}
 
