--- a/Lectures/latex/lecture-18.tex
+++ b/Lectures/latex/lecture-18.tex
@@ -125,7 +125,7 @@ Understanding the latency differences is crucial for virtual memory design:
 \item Influences design decisions significantly
 \item Page faults handled in software by OS due to large penalty
 
-![Access Latencies](../img/Virtual_mem_cycles.jpg)
+![Access Latencies](img/Virtual_mem_cycles.jpg)
 
 \subsection{Virtual and Physical Address Structure}
 
@@ -217,7 +217,7 @@ The page table is a data structure stored in memory that contains address transl
 
 \subsection{Address Translation Process}
 
-![Address Translation Process](../img/Virtual_Mem_Translation.jpg)
+![Address Translation Process](img/Virtual_Mem_Translation.jpg)
 
 Steps to access memory:
 
@@ -365,7 +365,7 @@ Steps to access memory:
 
 \subsection{Translation Lookaside Buffer (TLB)}
 
-![TLB](../img/Virtual_mem_TLB.jpg)
+![TLB](img/Virtual_mem_TLB.jpg)
 
 \subsubsection{Purpose}
 
