--- a/Lectures/latex/lecture-19.tex
+++ b/Lectures/latex/lecture-19.tex
@@ -87,7 +87,7 @@ Multiprocessor systems address performance limitations encountered with single p
 
 \subsection{Shared Memory Multiprocessors (SMM)}
 
-![Shared Memory Multiprocessors](../img/Multiprocessors_SSM.jpg)
+![Shared Memory Multiprocessors](img/Multiprocessors_SSM.jpg)
 
 \subsubsection{Most Common Approach}
 
@@ -145,7 +145,7 @@ Multiprocessor systems address performance limitations encountered with single p
 
 \subsection{Uniform Memory Access (UMA)}
 
-![Uniform Memory Access (UMA)](../img/Multiprocessors_NVM.jpg)
+![Uniform Memory Access (UMA)](img/Multiprocessors_NVM.jpg)
 
 \subsubsection{Definition}
 
@@ -249,7 +249,7 @@ Multiprocessor systems address performance limitations encountered with single p
 
 Common technique for cache coherence in SMP systems.
 
-![Bus Snooping](../img/Multiprocessors_bus.jpg)
+![Bus Snooping](img/Multiprocessors_bus.jpg)
 
 \subsubsection{What is Bus Snooping?}
 
@@ -440,7 +440,7 @@ Common technique for cache coherence in SMP systems.
 
 Named after four states: \textbf{Modified, Exclusive, Shared, Invalid}
 
-![MESI](../img/Multiprocessors_mesi.jpg)
+![MESI](img/Multiprocessors_mesi.jpg)
 
 Most popular cache coherency protocol, used in Intel Pentium and IBM PowerPC processors.
 
@@ -667,7 +667,7 @@ Most popular cache coherency protocol, used in Intel Pentium and IBM PowerPC pro
 
 \subsubsection{1. NC-NUMA (Non-Cached NUMA)}
 
-![Bus Snooping](../img/Multiprocessors_mmu.jpg)
+![Bus Snooping](img/Multiprocessors_mmu.jpg)
 
 \textbf{Characteristics}:
 
@@ -678,7 +678,7 @@ Most popular cache coherency protocol, used in Intel Pentium and IBM PowerPC pro
 
 \subsubsection{2. CC-NUMA (Cache-Coherent NUMA)}
 
-![Bus Snooping](../img/Multiprocessors_cmmu.jpg)
+![Bus Snooping](img/Multiprocessors_cmmu.jpg)
 
 \textbf{Characteristics}:
 
